// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorComponent /> matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    test
  </h1>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-1x66upb"
    />
  </div>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-16wgzhr"
    >
      Home
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NotFound /> matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    test
  </h1>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-1x66upb"
    >
      <span>
        Whoops, couldn't find data for this package!
      </span>
      <br />
      <span>
        If you feel this package is important you can hit me up on Twitter 
        <a
          class="css-1qgk5q"
          href="https://twitter.com/tmkndev"
        >
          @tmkndev
        </a>
      </span>
    </div>
  </div>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-16wgzhr"
    >
      Home
    </div>
  </div>
</DocumentFragment>
`;
